# hematite_nbt

./: .travis.yml  Cargo.toml  NEWS.md  README.md
benches/: filetests.rs
examples/: nbtprint.rs
macros/: Cargo.toml  lib.rs  tests.rs
macros/tests/: compiletest.rs
macros/tests/compile-fail/: bad_nbt_field.rs  enums.rs  missing_extern.rs  no_field_impl.rs  on_function.rs  unitstruct.rs
macros/tests/run-pass/: inner.rs  nbt_field.rs  tuplestruct.rs
nbt-serde/: Cargo.toml
nbt-serde/src/: decode.rs  encode.rs  error.rs  lib.rs  macros.rs  tests.rs
nbt-serde/tests/: basic.rs  errors.rs  filetests.rs  mcdata_tests.rs
scripts/: id_rsa.enc  travis-doc-upload.cfg
src/: blob.rs  de.rs  error.rs  lib.rs  macros.rs  raw.rs  ser.rs  serde_error.rs  serialize.rs  tests.rs  value.rs
src/serde/: mod.rs
src/serialize/: mod.rs  raw.rs
tests/: arrays.nbt  data.rs.in  filetests.rs  serde_basics.rs  serde_errors.rs
