[package]
name = "hematite-nbt"
description = "A library for working with Minecraft's Named Binary Tag (NBT) file format"
documentation = "http://docs.piston.rs/hematite_nbt/nbt/"
repository = "https://github.com/PistonDevelopers/hematite_nbt"
readme = "README.md"
license = "MIT"
version = "0.3.0"
authors = [
    "Fenhl <fenhl@fenhl.net>",
    "Carlos Cobo <toqueteos@gmail.com>",
    "Aaron Jacobs <atheriel@gmail.com>"
]

[lib]
name = "nbt"
path = "src/lib.rs"

[dependencies]
byteorder = "1.0.0"
flate2 = "0.2"
