[package]
name = "hematite-nbt"
description = "A full-featured library for working with Minecraft's Named Binary Tag (NBT) file format, including Serde support."
documentation = "https://docs.rs/hematite-nbt/"
repository = "https://github.com/PistonDevelopers/hematite_nbt"
readme = "README.md"
license = "MIT"
keywords = ["nbt", "minecraft", "serde", "serialization"]
version = "0.5.2"
authors = [
    "Aaron Jacobs <atheriel@gmail.com>",
    "Fenhl <fenhl@fenhl.net>",
    "Carlos Cobo <toqueteos@gmail.com>"
]

[features]
default = ["serde"]
preserve_order = ["indexmap"]

[lib]
name = "nbt"
path = "src/lib.rs"
bench = false

[dependencies]
byteorder = "1.0.0"
cesu8 = "1.1.0"
flate2 = "1.0.16"
indexmap = { version = "1.4", optional = true, features = ["serde-1"] }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = "0.3"
serde_derive = "1.0"
serde_json = "1.0"

[[bench]]
name = "filetests"
harness = false
